<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.matt.visor.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_hud_detail"
        android:name="com.matt.visor.fragments.home.HudDetailFragment"
        android:label="@string/title_hud_detail"
        tools:layout="@layout/fragment_hud_detail" />

    <fragment
        android:id="@+id/navigation_sensor_gps"
        android:name="com.matt.visor.fragments.home.SensorGpsFragment"
        android:label="@string/title_sensor_GPS"
        tools:layout="@layout/fragment_sensor_gps" />

    <fragment
        android:id="@+id/navigation_sensor_detail"
        android:name="com.matt.visor.fragments.home.SensorDetail"
        android:label="@string/title_sensor_detail"
        tools:layout="@layout/fragment_config" />


    <!--  RIDES  -->


    <fragment
        android:id="@+id/navigation_rides"
        android:name="com.matt.visor.fragments.rides.RidesFragment"
        android:label="@string/title_rides"
        tools:layout="@layout/fragment_rides" />

    <fragment
        android:id="@+id/navigation_rides_navigate"
        android:name="com.matt.visor.fragments.rides.RidesNavigateFragment"
        android:label="@string/title_rides_navigate"
        tools:layout="@layout/fragment_rides_navigate" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.matt.visor.fragments.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />


    <!--  History  -->

    <fragment
        android:id="@+id/navigation_history_detail"
        android:name="com.matt.visor.fragments.history.HistoryDetailFragment"
        android:label="@string/title_history_details"
        tools:layout="@layout/fragment_history_detail" />
</navigation>