<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RideActivity"
    >

    <!--  MAP  -->
    <fragment
        android:id="@+id/rides_gps_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


    <!--  Info box START  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/rides_gps_map"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="8dp"
            android:layout_margin="2dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="4dp"
                android:gravity="center"
                >
                <TextView
                    android:id="@+id/rides_txt_elapsed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35sp"
                    android:text="@string/placeholder"
                    android:textStyle="bold"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/duration"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="2dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/rides_txt_distance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:text="@string/placeholder"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            android:text="DISTANCE (km)"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="2dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="4dp"
                        android:gravity="center"
                        >
                        <TextView
                            android:id="@+id/rides_txt_speed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="30sp"
                            android:text="@string/placeholder"
                            android:textStyle="bold"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            android:text="SPEED (km/h)"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                >

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardElevation="4dp"
                    app:cardCornerRadius="8dp"
                    android:layout_margin="2dp"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="4dp"
                        android:gravity="center"
                        >

                        <ImageView
                            android:id="@+id/rides_img_maneuverIcon"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/launcher_icon"
                            />

                        <TextView
                            android:id="@+id/rides_img_maneuverDistance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:layout_marginBottom="5dp"
                            android:text="@string/maveuver"
                            />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <!--  Info box END  -->

    <!--  Bottom bar  -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ride_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/ride_bg_bottom_full"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

        <ImageButton
            android:id="@+id/ride_btn_discard"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:padding="0dp"
            android:src="@drawable/icon_ride_discard"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ride_btn_startPauseSave"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <ImageButton
            android:id="@+id/ride_btn_startPauseSave"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerInside"
            android:padding="0dp"
            android:src="@drawable/icon_ride_start"
            app:layout_constraintStart_toEndOf="@+id/ride_btn_discard"
            app:layout_constraintEnd_toStartOf="@+id/ride_btn_save"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            />

        <ImageButton
            android:id="@+id/ride_btn_save"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            android:padding="0dp"
            android:src="@drawable/icon_ride_save"
            app:layout_constraintStart_toEndOf="@+id/ride_btn_startPauseSave"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>